--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
 </head>
 <body>
     <div>
-        <img src="anonimo.jpg" width="200" height="200">
-        <h2>Lucia Iaquinandi</h2>
+    <div class="bordo">
+        <img src="https://i.pinimg.com/236x/20/2c/6d/202c6d0314ccd842f6d733789d0b6374.jpg" width="200" height="200" alt="ciao" >
+        <div>
+            <h2>Lucia Iaquinandi</h2>
         
-    <p>Intrapendente, determinata e diligente. Specializzata in Biotecnologie del Farmaco ma affascinata dai linguaggi di programmazione e dal mondo IT.
+         <p>Intrapendente, determinata e diligente. Specializzata in Biotecnologie del Farmaco ma affascinata dai linguaggi di programmazione e dal mondo IT.
         Sempre in evoluzione e dedita all'apprendimento continuo, mi ritengo una persona curiosa, ambiziosa e appassionata con una spiccata propensione 
         alla comunicazione efficace e al lavoro di squadra con orientamento al risultato.
         Sono una persona pragmatica, risoluta e proattiva che è sempre pronta a lanciarsi in nuove sfide.
         </p>
+        </div>
+        
 
         <h4>Trovami su:</h4>
         <a href="https://www.LinkedIn.com/in/lucia-iaquinandi-309739203">Profilo LinkedIn</a><br>
         <a href="luciaiaquinandi@gmail.com">Contattami</a><br>
         <a href="tel:3356789101">Chiamami</a>
-
+    </div>
     </div>
 </body>
 </html>
