--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
     <div class="bordo">
-        <img src="https://i.pinimg.com/236x/20/2c/6d/202c6d0314ccd842f6d733789d0b6374.jpg" width="200" height="200" alt="ciao" >
+        <img src="profile.jpg" width="200" height="200" alt="ciao" >
         <div>
             <h2>Lucia Iaquinandi</h2>
         
